--- a/.github/workflows/sample-workflow.yml
+++ b/.github/workflows/sample-workflow.yml
@@ -5,10 +5,10 @@ jobs:
     runs-on: debian-latest
     steps:
       -run: echo "The job was successfully triggered by a ${{ github.event_name }} event."
-      -run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      -run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub."
       -run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       -name:  Check out repository code
-       uses: actions/checkout@v0.2
+       -uses: actions/checkout@v2
       -run: echo "The ${{ github.repository }} repository hsa been cloned to the runner."
       -name: List files in the repository
          run: | 
