--- a/.github/workflows/sample-workflow.yml
+++ b/.github/workflows/sample-workflow.yml
@@ -4,14 +4,14 @@ jobs:
   explore-first-github-workflow:
     runs-on: debian-latest
     steps:
-      -run: echo "The job was successfully triggered by a ${{ github.event_name }} event."
-      -run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub."
-      -run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      -name:  Check out repository code
-       - uses: actions/checkout@v2
-      -run: echo "The ${{ github.repository }} repository hsa been cloned to the runner."
-      -name: List files in the repository
-         run: | 
+      - run: echo "The job was successfully triggered by a ${{ github.event_name }} event."
+      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub."
+      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name:  Check out repository code
+        uses: actions/checkout@v2
+      - run: echo "The ${{ github.repository }} repository hsa been cloned to the runner."
+      - name: List files in the repository
+         run: |
           ls ${{ githubn.workspace }}
           - run: echo "This job's status is ${{ job.status }}."
           
