--- a/.github/workflows/sample-workflow.yml
+++ b/.github/workflows/sample-workflow.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v2
       - run: echo "The ${{ github.repository }} repository hsa been cloned to the runner."
       - name: List files in the repository
-         run 
+         run:|
            ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
           
