--- a/.github/workflows/netlify-cli.yml
+++ b/.github/workflows/netlify-cli.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run:  npm install netlify-cli -g
+      - run:  npm install netlify-cli
       - run: npm  netlify -v
       
     
